feat: added new endpoint (#29)
* feat: added new endppint

* feat: reworked implementation

* feat: updated pom and added docs

* fix: sonar issues

* feat: bugfix and improved exception mapper
